# SCore4cpp

./: CMakeLists.txt  README.md
