cmake_minimum_required(VERSION 3.5)

project(SCore4Cpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(SCore4Cpp main.cpp)

include(GNUInstallDirs)
install(TARGETS SCore4Cpp
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
